fix overflow in firefox

--- a/src/css/widgets/widget.less
+++ b/src/css/widgets/widget.less
@@ -421,7 +421,7 @@
   }
 
   .widget_content{
-    overflow-x: hidden;
+    overflow: hidden;
     min-height: 80px;
 
     &.clock{
